Ramdon image for solutions and topics. and testimony images

--- a/src/app/components/add-document-testimony/add-document-testimony.component.html
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.html
@@ -48,7 +48,7 @@
         ></textarea>
       </mat-form-field>
 
-      <!-- <div class="imagebox">
+      <div class="imagebox">
         <label [ngClass]="imageUrl ? 'data' : 'empty'">
           <mat-icon>photo_camera</mat-icon>
           <span>Subir imagen</span>
@@ -66,7 +66,7 @@
           alt="img_upload"
           [ngClass]="imageUrl ? 'data' : 'empty'"
         />
-      </div> -->
+      </div>
     </div>
     <div class="messageError">
       <span *ngIf="messageError" class="messageError"
