--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -111,7 +111,7 @@
         <div class="set-12 header-card">
           <mat-card>
             <!-- IMAGE -->
-            <div class="set-12 image-box">
+            <div class="set-12 image-box imghldr">
               <mat-icon *ngIf="!image">panorama</mat-icon>
               <img
                 *ngIf="image"
