--- a/src/app/public-documents/solution/solution.component.scss
+++ b/src/app/public-documents/solution/solution.component.scss
@@ -4,6 +4,28 @@
     margin-left: 20px;
     margin-bottom: 100px;
 
+    .imghldr {
+      min-height: 250px;
+      max-height: 250px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba($color: #ceddff, $alpha: 0.4);
+      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
+      overflow: hidden;
+
+      mat-icon {
+        font-size: 70pt;
+        color: rgba($color: #000000, $alpha: 0.1);
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+        position: relative;
+        object-fit: contain;
+      }
+    }
     .main-box {
       background-color: white;
     }
