--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -103,7 +103,7 @@
           <div class="set-12 header-card">
             <mat-card>
               <!-- IMAGE -->
-              <div class="image-box">
+              <div class="image-box imghldr">
                 <mat-icon *ngIf="!image">panorama</mat-icon>
                 <img
                   *ngIf="image"
