--- a/src/app/public-documents/topic/topic.component.scss
+++ b/src/app/public-documents/topic/topic.component.scss
@@ -129,23 +129,25 @@
     }
 
     .imghldr {
-      // min-height: 150px;
-      // display: flex;
-      // align-items: center;
-
-      // justify-content: center;
-      // background: rgba($color: #ceddff, $alpha: 0.4);
-      // border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
+      min-height: 250px;
+      max-height: 250px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba($color: #ceddff, $alpha: 0.4);
+      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
+      overflow: hidden;
 
       mat-icon {
         font-size: 70pt;
         color: rgba($color: #000000, $alpha: 0.1);
       }
+
       img {
-        width: 230px;
-        // height: 300px;
-        height: 280px;
-        object-fit: cover;
+        width: 100%;
+        height: auto;
+        position: relative;
+        object-fit: contain;
       }
     }
 
