--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -157,12 +157,24 @@
               >
               </expanded-text>
             </div>
-            <div class="favorites-button">
+            <div *ngIf="!isFavorites" class="favorites-button">
+              <button
+                mat-icon-button
+                style="background-color: #d9d9d9"
+                color="warn"
+                aria-label="Example icon button with a heart icon"
+                (click)="addFavorites()"
+              >
+                <mat-icon>favorite</mat-icon>
+              </button>
+            </div>
+            <div *ngIf="isFavorites" class="favorites-button">
               <button
                 mat-icon-button
                 color="warn"
+                style="background-color: #e98282"
                 aria-label="Example icon button with a heart icon"
-                (click)="chekFavorites()"
+                (click)="removeFavorites()"
               >
                 <mat-icon>favorite</mat-icon>
               </button>
