--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -115,7 +115,7 @@
                 <div class="info">
                   <div class="actions">
                     <p>Relevancia ciudadana</p>
-                    <p class="votes">{{ rank.totalPoints }} / 100</p>
+                    <p class="votes">{{ stats.score }} / 100</p>
 
                     <button
                       *ngIf="userVoted"
