--- a/src/app/public-documents/components/solutions-card/solutions-card.component.html
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.html
@@ -10,9 +10,10 @@
     <table *ngIf="data.filteredData.length > 0 else notSolution" 
             mat-table 
             [dataSource]="data" 
+            matSort
             class="">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Título</th>
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Ordenar por título">Título</th>
         <td mat-cell *matCellDef="let element">
           <button type="button" class="catbtn-2 " (click)="redirect(element._id)">
             {{ element.title }}
@@ -20,10 +21,10 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="ranking">
-        <th mat-header-cell *matHeaderCellDef>Calificación</th>
+      <ng-container matColumnDef="stats.score">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Ordenar por calificación">Calificación</th>
         <td mat-cell *matCellDef="let element">
-          {{ 14 }}
+          {{ element.stats.score}}
         </td>
       </ng-container>
 
