--- a/src/app/public-documents/components/vertical-stats/vertical-stats.component.html
+++ b/src/app/public-documents/components/vertical-stats/vertical-stats.component.html
@@ -35,7 +35,7 @@
         <small>Soluciones</small>
       </p>
       <p class="amount">
-        <small>{{ 320 }}</small>
+        <small>{{ solutions }}</small>
       </p>
     </div>
   </div>
@@ -52,7 +52,7 @@
         <small>Problemáticas</small>
       </p>
       <p class="amount">
-        <small>{{ 233 }}</small>
+        <small>{{ topics }}</small>
       </p>
     </div>
   </div>
