--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -122,7 +122,7 @@
               <div class="info">
                 <div class="actions">
                   <p>Relevancia ciudadana</p>
-                  <p class="votes">{{ rank.totalPoints }} / 100</p>
+                  <p class="votes">{{ stats.score }} / 100</p>
                   <button
                     *ngIf="userVoted"
                     mat-raised-button
