--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -74,7 +74,7 @@
           <spider-chart></spider-chart>
         </div>
         <div class="set-6">
-          <top10-list [data]="items"></top10-list>
+          <top10-list [data]="topSolutions"></top10-list>
         </div>
       </div>
     </div>
