--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -60,8 +60,8 @@
           </div>
         </mat-card>
         <horizontal-stats
-          [users]="rank.stats.uniqueVisitsInRelation"
-          [interactions]="rank.stats.AvgSubsecuentVisitsInRelation"
+          [users]="rank.users"
+          [interactions]="rank.interactions"
         ></horizontal-stats>
       </div>
       <div class="set-9 col-rgt">
@@ -108,14 +108,22 @@
         <div class="set-12 tables" style="background-color: white">
           <div class="set-6">
             <table
+              *ngIf="solutionsDataSource.length > 0; else notsolutions"
               mat-table
               [dataSource]="SolutionDataSource"
               class="mat-elevation-z8"
               matSort
-              *ngIf="solutionsDataSource.length > 0; else notsolutions"
+              id="table-solutions"
             >
               <ng-container matColumnDef="title">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Título</th>
+                <th
+                  mat-header-cell
+                  *matHeaderCellDef
+                  mat-sort-header
+                  sortActionDescription="Ordenar por título"
+                >
+                  Título
+                </th>
                 <td mat-cell *matCellDef="let element">
                   <button
                     type="button"
@@ -127,15 +135,24 @@
                 </td>
               </ng-container>
 
-              <ng-container matColumnDef="score">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Ranking</th>
+              <ng-container matColumnDef="stats.score">
+                <th
+                  mat-header-cell
+                  *matHeaderCellDef
+                  mat-sort-header
+                  sortActionDescription="Ordenar por calificación"
+                >
+                  Ranking
+                </th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.stats.score }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="users">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuarios</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                  Usuarios
+                </th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.stats.users }}
                 </td>
@@ -151,14 +168,22 @@
 
           <div class="set-6">
             <table
+              *ngIf="panelTopicsData.length > 0; else nottopic"
               mat-table
               [dataSource]="TopicDataSource"
               class="mat-elevation-z8"
-              *ngIf="panelTopicsData.length > 0; else nottopic"
+              id="table-topics"
               matSort
             >
               <ng-container matColumnDef="title">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Ordenar por título">Título</th>
+                <th
+                  mat-header-cell
+                  *matHeaderCellDef
+                  mat-sort-header
+                  sortActionDescription="Ordenar por título"
+                >
+                  Título
+                </th>
                 <td mat-cell *matCellDef="let element">
                   <button
                     type="button"
@@ -170,15 +195,24 @@
                 </td>
               </ng-container>
 
-              <ng-container matColumnDef="score">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Ranking</th>
+              <ng-container matColumnDef="stats.score">
+                <th
+                  mat-header-cell
+                  *matHeaderCellDef
+                  mat-sort-header
+                  sortActionDescription="Ordenar por calificación"
+                >
+                  Ranking
+                </th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.stats.score }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="users">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuarios</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                  Usuarios
+                </th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.stats.users }}
                 </td>
