--- a/src/app/public-documents/components/solutions-card/solutions-card.component.html
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.html
@@ -2,29 +2,52 @@
   <div class="solutions-box" style="text-align: start">
     <div class="set-12 table-head">
       <p class="title">Soluciones</p>
-      <input type="text" (keyup)="applyFilterSolution($event)" placeholder="Buscar soluciones..."
+      <input
+        type="text"
+        (keyup)="applyFilterSolution($event)"
+        placeholder="Buscar soluciones..."
         [disabled]="data.length == 0"
         [class.searchDisabled]="data.filteredData.length === 0"
-        >
+      />
     </div>
-    <table *ngIf="data.filteredData.length > 0 else notSolution" 
-            mat-table 
-            [dataSource]="data" 
-            matSort
-            class="">
+    <table
+      *ngIf="data.filteredData.length > 0; else notSolution"
+      mat-table
+      [dataSource]="data"
+      matSort
+      class=""
+    >
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Ordenar por título">Título</th>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          sortActionDescription="Ordenar por título"
+        >
+          Título
+        </th>
         <td mat-cell *matCellDef="let element">
-          <button type="button" class="catbtn-2 " (click)="redirect(element._id)">
+          <button
+            type="button"
+            class="catbtn-2"
+            (click)="redirect(element._id)"
+          >
             {{ element.title }}
-          </button> 
+          </button>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="stats.score">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Ordenar por calificación">Calificación</th>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          sortActionDescription="Ordenar por calificación"
+        >
+          Calificación
+        </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.stats.score}}
+          {{ element.stats.score }}
         </td>
       </ng-container>
 
@@ -34,6 +57,5 @@
     <ng-template #notSolution>
       <p class="notData">Sin soluciones</p>
     </ng-template>
-    
   </div>
 </mat-card>
