add spiderchart data

--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -88,7 +88,7 @@
         </div>
         <div class="set-12">
           <div class="set-6 col-rgt-2">
-            <spider-chart></spider-chart>
+            <spider-chart [data]="topLayouts"></spider-chart>
           </div>
           <div class="set-6">
             <top10-list [data]="topSolutions"></top10-list>
