--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -187,10 +187,10 @@
             style="height: 480px; padding: 30px"
           >
             <div class="set-12 mt-2">
-              <div class="set-6 col-rgt-2">
+              <div class="set-6 col-rgt-2" style="padding:40px">
                 <spider-chart [withBorder]="false"></spider-chart>
               </div>
-              <div class="set-6 col-rgt-2">
+              <div class="set-6 col-rgt-2" >
                 <circle-chart></circle-chart>
               </div>
               <div class="set-6"></div>
