--- a/src/app/public-documents/subcategory/subcategory.component.scss
+++ b/src/app/public-documents/subcategory/subcategory.component.scss
@@ -127,6 +127,7 @@
     // color: #00031d;
     padding: 5px 20px;
     // border: 3px solid #71f5ad;
+    text-align: start;
 
     font-size: 15px;
     font-weight: 600;
