--- a/src/app/components/spider-chart/spider-chart.component.scss
+++ b/src/app/components/spider-chart/spider-chart.component.scss
@@ -1,7 +1,7 @@
 :host {
   canvas {
-    width: 100%;
-    max-width: 300px;
+    // width: 100%;
+    min-width: 420px;
   }
   margin: 0px;
   width: 100%;
