--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -60,8 +60,8 @@
           </div>
         </mat-card>
         <horizontal-stats
-          [users]="rank.stats.uniqueVisitsInRelation"
-          [interactions]="rank.stats.AvgSubsecuentVisitsInRelation"
+          [users]="stats?.users"
+          [interactions]="stats?.interactions"
         ></horizontal-stats>
       </div>
       <div class="set-9 col-rgt">
@@ -116,7 +116,7 @@
             >
               <ng-container matColumnDef="title">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Título</th>
-                <td mat-cell *matCellDef="let element">
+                <td mat-cell *matCellDef="let element" style="text-align:start">
                   <button
                     type="button"
                     class="catbtn-2 color"
@@ -128,7 +128,7 @@
               </ng-container>
 
               <ng-container matColumnDef="score">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Ranking</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación</th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.stats.score }}
                 </td>
@@ -159,7 +159,7 @@
             >
               <ng-container matColumnDef="title">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Ordenar por título">Título</th>
-                <td mat-cell *matCellDef="let element">
+                <td mat-cell *matCellDef="let element" style="text-align:start">
                   <button
                     type="button"
                     class="catbtn-2 color"
@@ -171,7 +171,7 @@
               </ng-container>
 
               <ng-container matColumnDef="score">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Ranking</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación</th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.stats.score }}
                 </td>
