--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -33,7 +33,7 @@
       ></horizontal-stats>
 
       <div class="set-12">
-        <vertical-stats [topics]="document.stats.topics" [solutions]="document.stats.solutions"></vertical-stats>
+        <vertical-stats [topics]="document.stats?.topics" [solutions]="document.stats?.solutions"></vertical-stats>
       </div>
 
       <div class="set-12 mt-2">
